# example-temporal-worker

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  rockcraft.yaml
scripts/: start-worker.sh
temporal_worker/: config.py  constants.py  init_logging.py  worker.py
temporal_worker/activities/: activities.py
temporal_worker/models/: io_models.py
temporal_worker/python_scripts/: start_workflow.py
temporal_worker/workflows/: workflow.py
